--- a/try.html
+++ b/try.html
@@ -418,50 +418,48 @@
         <div class="project">
           <div class="project-title"><strong>MARC (Multi-Agent Resource Coordinator)</strong>, <span class="company-name">IBM</span></div>
           <ul>
-            <li>Developed agents for IBM's MARC platform, enhancing multi-agent collaboration and automation.</li>
-            <li>Applied AI Governance for ethical and compliant automation across enterprise environments.</li>
-            <li>Used LLMs to streamline task orchestration and agent selection for scalable workflows.</li>
-            <li><strong>Key Skills:</strong> Python, Multi-Agent Systems, LLMs, AI Governance, Workflow Automation, IBM Watsonx, LangChain, LangGraph</li>
+            <li>Developed and deployed multiple agents for IBM's MARC platform, enhancing multi-agent collaboration and workflow automation.</li>
+            <li>Applied AI Governance principles to ensure ethical and compliant operations of automation agents.</li>
+            <li>Utilized advanced Large Language Models (LLMs) for intelligent task orchestration and agent selection.</li>
+            <li>Streamlined enterprise workflows with a scalable multi-agent AI system.</li>
           </ul>
         </div>
         <div class="project">
           <div class="project-title"><strong>Mizuho Bank</strong>, <span class="company-name">Accenture</span></div>
           <ul>
-            <li>Deployed PdfGPT for AI-powered text summarization, enhancing financial document processing.</li>
-            <li>Implemented feature extraction and chat functionality, reducing review time by 30%.</li>
-            <li><strong>Key Skills:</strong> Python, NLP, Document Processing, Text Summarization, AI-Powered Chat, AWS, Machine Learning</li>
+            <li>Developed and deployed PdfGPT, an AI-powered text summarization system, enhancing document processing workflows.</li>
+            <li>Implemented key feature extraction capabilities and PDF text summarization through interactive chat functionality.</li>
+            <li>Reduced document review time by 30% with AI-driven system.</li>
           </ul>
         </div>
         <div class="project">
           <div class="project-title"><strong>Ulster Bank</strong>, <span class="company-name">Accenture</span></div>
           <ul>
-            <li>Automated ML pipelines for customer segmentation using Python, AWS Glue, and Athena.</li>
-            <li>Created and validated data models, delivering insights to client stakeholders.</li>
-            <li><strong>Key Skills:</strong> Python, Customer Segmentation, AWS Glue, Athena, Machine Learning, Data Modeling, Statistical Analysis</li>
+            <li>Automated machine learning pipelines for customer segmentation algorithms using Python, Glue, and Athena.</li>
+            <li>Created and validated Data Models, deriving meaningful insights and explaining them to client stakeholders.</li>
           </ul>
         </div>
         <div class="project">
           <div class="project-title"><strong>Facebook</strong>, <span class="company-name">Accenture</span></div>
           <ul>
-            <li>Analyzed disparate data sources to provide actionable insights for social media clients.</li>
-            <li>Optimized ML pipelines for forecasting models, enhancing business intelligence.</li>
-            <li><strong>Key Skills:</strong> Python, Machine Learning, Forecasting Models, AWS SageMaker, Data Integration, Business Intelligence</li>
+            <li>Examined data from multiple disparate sources to discover insights providing competitive advantage for clients.</li>
+            <li>Designed and optimized machine learning pipelines, specializing in the creation of forecasting models.</li>
+            <li>Leveraged Machine Learning, Python, Glue, Athena, and Sagemaker to enhance decision-making processes.</li>
           </ul>
         </div>
         <div class="project">
           <div class="project-title"><strong>Waste Classification Code</strong>, <span class="company-name">Clean Harbors</span></div>
           <ul>
-            <li>Fine-tuned waste classification models for autonomous WCC assignment and compliance.</li>
-            <li>Created unified datasets with logical checks for consistent waste classification.</li>
-            <li><strong>Key Skills:</strong> Python, Machine Learning, Classification Models, Data Engineering, Environmental Analytics, Statistical Analysis</li>
+            <li>Designed and fine-tuned Waste Classification Code Prediction models, enabling autonomous WCC assignment.</li>
+            <li>Created a unified dataset encompassing vital features for all waste classes.</li>
+            <li>Applied logical data checks for input consistency, facilitating classification based on physical properties.</li>
           </ul>
         </div>
         <div class="project">
           <div class="project-title"><strong>Invoice Audit</strong>, <span class="company-name">Clean Harbors</span></div>
           <ul>
-            <li>Developed invoice auditing and revenue prediction algorithms using ML and statistics.</li>
-            <li>Streamlined verification processes, reducing audit time by 20% with automation.</li>
-            <li><strong>Key Skills:</strong> Python, Machine Learning, Statistical Analysis, Fraud Detection, Process Automation, Financial Analytics</li>
+            <li>Developed an invoice auditing and revenue prediction algorithm using machine learning and statistical analysis.</li>
+            <li>Streamlined invoice verification, reducing audit time by 20%.</li>
           </ul>
         </div>
       </div>
@@ -541,35 +539,33 @@ Certifications
 
 Key Projects
 MARC (Multi-Agent Resource Coordinator), IBM
-- Developed agents for IBM's MARC platform, enhancing multi-agent collaboration and automation.
-- Applied AI Governance for ethical and compliant automation across enterprise environments.
-- Used LLMs to streamline task orchestration and agent selection for scalable workflows.
-- Key Skills: Python, Multi-Agent Systems, LLMs, AI Governance, Workflow Automation, IBM Watsonx, LangChain, LangGraph
+- Developed and deployed multiple agents for IBM's MARC platform, enhancing multi-agent collaboration and workflow automation.
+- Applied AI Governance principles to ensure ethical and compliant operations of automation agents.
+- Utilized advanced Large Language Models (LLMs) for intelligent task orchestration and agent selection.
+- Streamlined enterprise workflows with a scalable multi-agent AI system.
 
 Mizuho Bank, Accenture
-- Deployed PdfGPT for AI-powered text summarization, enhancing financial document processing.
-- Implemented feature extraction and chat functionality, reducing review time by 30%.
-- Key Skills: Python, NLP, Document Processing, Text Summarization, AI-Powered Chat, AWS, Machine Learning
+- Developed and deployed PdfGPT, an AI-powered text summarization system, enhancing document processing workflows.
+- Implemented key feature extraction capabilities and PDF text summarization through interactive chat functionality.
+- Reduced document review time by 30% with AI-driven system.
 
 Ulster Bank, Accenture
-- Automated ML pipelines for customer segmentation using Python, AWS Glue, and Athena.
-- Created and validated data models, delivering insights to client stakeholders.
-- Key Skills: Python, Customer Segmentation, AWS Glue, Athena, Machine Learning, Data Modeling, Statistical Analysis
+- Automated machine learning pipelines for customer segmentation algorithms using Python, Glue, and Athena.
+- Created and validated Data Models, deriving meaningful insights and explaining them to client stakeholders.
 
 Facebook, Accenture
-- Analyzed disparate data sources to provide actionable insights for social media clients.
-- Optimized ML pipelines for forecasting models, enhancing business intelligence.
-- Key Skills: Python, Machine Learning, Forecasting Models, AWS SageMaker, Data Integration, Business Intelligence
+- Examined data from multiple disparate sources to discover insights providing competitive advantage for clients.
+- Designed and optimized machine learning pipelines, specializing in the creation of forecasting models.
+- Leveraged Machine Learning, Python, Glue, Athena, and Sagemaker to enhance decision-making processes.
 
 Waste Classification Code, Clean Harbors
-- Fine-tuned waste classification models for autonomous WCC assignment and compliance.
-- Created unified datasets with logical checks for consistent waste classification.
-- Key Skills: Python, Machine Learning, Classification Models, Data Engineering, Environmental Analytics, Statistical Analysis
+- Designed and fine-tuned Waste Classification Code Prediction models, enabling autonomous WCC assignment.
+- Created a unified dataset encompassing vital features for all waste classes.
+- Applied logical data checks for input consistency, facilitating classification based on physical properties.
 
 Invoice Audit, Clean Harbors
-- Developed invoice auditing and revenue prediction algorithms using ML and statistics.
-- Streamlined verification processes, reducing audit time by 20% with automation.
-- Key Skills: Python, Machine Learning, Statistical Analysis, Fraud Detection, Process Automation, Financial Analytics
+- Developed an invoice auditing and revenue prediction algorithm using machine learning and statistical analysis.
+- Streamlined invoice verification, reducing audit time by 20%.
 
 Key Achievements
 - Ranked #1 in HackerRank SQL, demonstrating exceptional database management skills.
