--- a/try.html
+++ b/try.html
@@ -523,7 +523,7 @@ Capgemini - Process Lead (Feb 2021 - Mar 2021)
 • Coordinated high-quality project deliverables within tight timelines, enhancing operational efficiency through strategic process improvements.
 
 Clean Harbors - Data Scientist (Jun 2018 - Jan 2021)
-• Developed AI-driven waste classification and invoice auditing systems, improving compliance operations and reducing costs by 15% through predictive analytics.
+• Developed AI-driven WCC and invoice auditing systems, improving compliance operations and reducing costs by 15% through predictive analytics.
 • Applied advanced statistical analysis and data mining techniques to solve complex environmental and financial challenges across enterprise operations.
 
 Certifications
@@ -548,10 +548,10 @@ Certifications
 Key Projects
 MARC (Multi-Agent Resource Coordinator), IBM
 • Developed and deployed multiple agents for IBM's MARC platform, enhancing multi-agent collaboration and workflow automation using AI Governance principles.
-• Utilized advanced Large Language Models (LLMs) for intelligent task orchestration and agent selection, streamlining enterprise workflows with scalable multi-agent AI systems.
+• Utilized advanced LLMs for intelligent task orchestration and agent selection, streamlining enterprise workflows with scalable multi-agent AI systems.
 
 Mizuho Bank, Accenture
-• Developed and deployed PdfGPT, an AI-powered text summarization system, enhancing document processing workflows with key feature extraction capabilities.
+• Developed PdfGPT, an AI-powered text summarization system, enhancing document processing workflows with key feature extraction capabilities.
 • Implemented PDF text summarization through interactive chat functionality, reducing document review time by 30% with AI-driven automation systems.
 
 Ulster Bank, Accenture
