--- a/try.html
+++ b/try.html
@@ -397,7 +397,7 @@
         <div class="job">
           <div class="job-title"><strong>Clean Harbors</strong> - Data Scientist <span class="job-period">Jun 2018 - Jan 2021</span></div>
           <div class="job-description">
-            <div class="job-line">• Developed AI-driven waste classification and invoice auditing systems, improving compliance operations and reducing costs by 15% through predictive analytics.</div>
+            <div class="job-line">• Developed AI-driven WCC and invoice auditing systems, improving compliance operations and reducing costs by 15% through predictive analytics.</div>
             <div class="job-line">• Applied advanced statistical analysis and data mining techniques to solve complex environmental and financial challenges across enterprise operations.</div>
           </div>
         </div>
@@ -432,13 +432,13 @@
           <div class="project-title"><strong>MARC (Multi-Agent Resource Coordinator)</strong>, <span class="company-name">IBM</span></div>
           <div class="project-description">
             <div class="project-line">• Developed and deployed multiple agents for IBM's MARC platform, enhancing multi-agent collaboration and workflow automation using AI Governance principles.</div>
-            <div class="project-line">• Utilized advanced Large Language Models (LLMs) for intelligent task orchestration and agent selection, streamlining enterprise workflows with scalable multi-agent AI systems.</div>
+            <div class="project-line">• Utilized advanced LLMs for intelligent task orchestration and agent selection, streamlining enterprise workflows with scalable multi-agent AI systems.</div>
           </div>
         </div>
         <div class="project">
           <div class="project-title"><strong>Mizuho Bank</strong>, <span class="company-name">Accenture</span></div>
           <div class="project-description">
-            <div class="project-line">• Developed and deployed PdfGPT, an AI-powered text summarization system, enhancing document processing workflows with key feature extraction capabilities.</div>
+            <div class="project-line">• Developed PdfGPT, an AI-powered text summarization system, enhancing document processing workflows with key feature extraction capabilities.</div>
             <div class="project-line">• Implemented PDF text summarization through interactive chat functionality, reducing document review time by 30% with AI-driven automation systems.</div>
           </div>
         </div>
