--- a/try.html
+++ b/try.html
@@ -453,13 +453,13 @@
           <div class="project-title"><strong>Facebook</strong>, <span class="company-name">Accenture</span></div>
           <div class="project-description">
             <div class="project-line">• Examined data from multiple disparate sources to discover actionable insights providing competitive advantage for social media clients.</div>
-            <div class="project-line">• Designed and optimized machine learning pipelines specializing in forecasting models, leveraging Python, Glue, Athena, and SageMaker to enhance decision-making processes.</div>
+            <div class="project-line">• Designed machine learning pipelines specializing in forecasting models, leveraging Python, Glue, and SageMaker to enhance decision-making processes.</div>
           </div>
         </div>
         <div class="project">
           <div class="project-title"><strong>Waste Classification Code</strong>, <span class="company-name">Clean Harbors</span></div>
           <div class="project-description">
-            <div class="project-line">• Designed and fine-tuned Waste Classification Code Prediction models enabling autonomous WCC assignment, creating unified datasets with vital features for all waste classes.</div>
+            <div class="project-line">• Designed and fine-tuned WCC Prediction models enabling autonomous WCC assignment, creating unified datasets with vital features for all waste classes.</div>
             <div class="project-line">• Applied logical data checks for input consistency and validation, facilitating accurate classification based on physical properties and environmental compliance requirements.</div>
           </div>
         </div>
