--- a/try.html
+++ b/try.html
@@ -376,7 +376,7 @@
         <div class="job">
           <div class="job-title"><strong>IBM</strong> - Data Scientist <span class="job-period">Mar 2024 - Present</span></div>
           <div class="job-description">
-            <div class="job-line">• Led enterprise-scale AI solutions development with multi-agent systems and MLOps governance frameworks, achieving 25% operational efficiency improvement.</div>
+            <div class="job-line">• Led AI solutions development with multi-agent systems and MLOps governance frameworks, achieving 25% operational efficiency improvement.</div>
             <div class="job-line">• Architected scalable ML model deployments and automation solutions for Fortune 500 clients, ensuring ethical AI practices in production environments.</div>
           </div>
         </div>
@@ -431,7 +431,7 @@
         <div class="project">
           <div class="project-title"><strong>MARC (Multi-Agent Resource Coordinator)</strong>, <span class="company-name">IBM</span></div>
           <div class="project-description">
-            <div class="project-line">• Developed and deployed multiple agents for IBM's MARC platform, enhancing multi-agent collaboration and workflow automation using AI Governance principles.</div>
+            <div class="project-line">• Developed multiple agents for IBM's MARC platform, enhancing multi-agent collaboration and workflow automation using AI Governance principles.</div>
             <div class="project-line">• Utilized advanced LLMs for intelligent task orchestration and agent selection, streamlining enterprise workflows with scalable multi-agent AI systems.</div>
           </div>
         </div>
