--- a/try.html
+++ b/try.html
@@ -323,7 +323,7 @@
       <div class="section">
         <div class="section-title"><i class="fas fa-briefcase"></i><span>Professional Experience</span></div>
         <div class="job">
-          <div class="job-title"><strong>IBM</strong> - Data Scientist <span class3="job-period">Mar 2024 - Present</span></div>
+          <div class="job-title"><strong>IBM</strong> - Data Scientist <span class="job-period">Mar 2024 - Present</span></div>
           <div class="job-description">
             <div class="job-line">• Led AI solutions development with multi-agent systems and MLOps governance frameworks, achieving 25% operational efficiency improvement.</div>
             <div class="job-line">• Architected scalable ML model deployments and automation solutions for Fortune 500 clients, ensuring ethical AI practices in production environments.</div>
