--- a/try.html
+++ b/try.html
@@ -25,7 +25,7 @@
       color: var(--text-color);
       line-height: 1.3;
       background-color: var(--background-color);
-      font-size: 11px;
+      font-size: 11.5px;
       font-weight: 400;
     }
     .container {
@@ -53,13 +53,13 @@
       gap: 1px;
     }
     .profile-name {
-      font-size: 15px;
+      font-size: 15.5px;
       font-weight: 700;
       letter-spacing: 0.3px;
       color: var(--text-color);
     }
     .profile-title {
-      font-size: 10px;
+      font-size: 10.5px;
       font-weight: 600;
       color: var(--highlight-color);
     }
@@ -67,7 +67,7 @@
       display: flex;
       flex-direction: column;
       gap: 1px;
-      font-size: 9px;
+      font-size: 9.5px;
       text-align: right;
     }
     .contact-item {
@@ -78,7 +78,7 @@
     }
     .contact-item .icon {
       color: var(--primary-color);
-      font-size: 9px;
+      font-size: 9.5px;
     }
     .contact-item a, .contact-item span {
       color: var(--text-color);
@@ -87,7 +87,7 @@
     }
     .section { margin-bottom: 3px; }
     .section-title {
-      font-size: 12.5px;
+      font-size: 13px;
       font-weight: 700;
       color: var(--primary-color);
       text-transform: uppercase;
@@ -101,7 +101,7 @@
     .section-title i {
       color: var(--primary-color);
       margin-right: 0.6mm;
-      font-size: 10px;
+      font-size: 10.5px;
     }
     .section-title span {
       color: var(--primary-color);
@@ -116,7 +116,7 @@
     }
     .job { padding-left: 12px; }
     .job-title {
-      font-size: 11px;
+      font-size: 11.5px;
       font-weight: 600;
       color: var(--text-color);
       display: inline-block;
@@ -124,7 +124,7 @@
       letter-spacing: 0.2px;
     }
     .school-name, .project-title {
-      font-size: 11px;
+      font-size: 11.5px;
       font-weight: 600;
       color: var(--text-color);
       padding-left: 12px;
@@ -137,7 +137,7 @@
     }
     .job-period {
       font-weight: 600;
-      font-size: 10px;
+      font-size: 10.5px;
       color: #555;
       float: right;
     }
@@ -148,13 +148,13 @@
       padding-left: 12px;
     }
     .education-details {
-      font-size: 11px;
+      font-size: 11.5px;
       font-weight: 600;
       color: var(--text-color);
     }
     .education-period {
       font-weight: 600;
-      font-size: 10px;
+      font-size: 10.5px;
       color: #555;
     }
     ul {
@@ -164,7 +164,7 @@
     ul li {
       margin-bottom: 2px;
       text-align: justify;
-      font-size: 10px;
+      font-size: 10.5px;
     }
     ul li::marker {
       color: var(--primary-color);
@@ -172,7 +172,7 @@
     p {
       margin: 1px 0;
       text-align: justify;
-      font-size: 10px;
+      font-size: 10.5px;
     }
     .section p { padding-left: 12px; }
     strong {
@@ -190,7 +190,7 @@
       border-radius: 4px;
       cursor: pointer;
       font-weight: 600;
-      font-size: 12px;
+      font-size: 12.5px;
       border: none;
       transition: background-color 0.3s ease;
       box-shadow: 0 2px 5px rgba(0,0,0,0.2);
@@ -204,7 +204,7 @@
       margin: 1px 0;
     }
     .job-line, .project-line {
-      font-size: 10px;
+      font-size: 10.5px;
       text-align: justify;
       margin-bottom: 1px;
       line-height: 1.3;
@@ -225,13 +225,13 @@
       align-items: flex-start;
       width: 32.33%;
       margin-bottom: 3px;
-      font-size: 10px;
+      font-size: 10.5px;
     }
     .certifications-list li::before {
       content: "•";
       color: var(--primary-color);
       margin-right: 5px;
-      font-size: 10px;
+      font-size: 10.5px;
     }
     .certifications-list li:nth-child(3n) { margin-right: 0; }
     @media (max-width: 768px) {
@@ -243,12 +243,6 @@
       .certifications-list li:nth-child(3n) { margin-right: 2%; }
     }
     .certification-institution { font-weight: 700; }
-    #atsText {
-      display: none;
-      width: 100%;
-      height: 100px;
-      margin-top: 8px;
-    }
     @media print {
       body { background: none; }
       .container {
@@ -259,7 +253,7 @@
         height: 100%;
         border: none;
       }
-      #downloadButton, #atsText { display: none; }
+      #downloadButton { display: none; }
       header { border-bottom: 1.5px solid var(--primary-color); }
       .contact-item a, .contact-item span { color: var(--text-color); }
       .profile-title { color: var(--highlight-color); }
@@ -277,8 +271,8 @@
         padding: 3px 4px;
         min-height: 40px;
       }
-      .contact-info, .contact-item .icon { font-size: 9.5px; }
-      body { font-size: 11.5px; }
+      .contact-info, .contact-item .icon { font-size: 10px; }
+      body { font-size: 12px; }
     }
   </style>
 </head>
@@ -434,7 +428,7 @@
         <div class="skills-list">
           <ul>
             <li><strong>Data Science & AI:</strong> Generative AI, LLMs, RAG, NLP, Transformers, Machine Learning, Deep Learning, Time Series, Reinforcement Learning, Computer Vision, Statistical Modeling</li>
-            <li><strong>Programming & Frameworks:</strong> Python, R, SQL, TensorFlow, PyTorch, Scikit-learn, Keras, LangChain, LangGraph, CrewAI, Hugging Face, FastAPI, Flask, Django, RESTful APIs</li>
+            <li><strong>Programming & Frameworks:</strong> Python, R, SQL, TensorFlow, PyTorch, Scikit-learn, Keras, LangChain, LangGraph, CrewAI, Hugging Face, FastAPI, Flask, RESTful APIs</li>
             <li><strong>Cloud & Databases:</strong> AWS (Bedrock, SageMaker, Redshift, Athena, S3, EC2, Lambda, Glue), Azure (Synapse, Databricks, ML Studio), GCP (BigQuery, Vertex AI), Snowflake, PostgreSQL, MongoDB, Pinecone, Chroma, Milvus</li>
             <li><strong>Data Visualization:</strong> Tableau, Power BI, Matplotlib, Seaborn, Plotly</li>
             <li><strong>Tools & DevOps:</strong> Git, GitHub, GitLab, Bitbucket, Docker, Kubernetes, CI/CD for ML Pipelines</li>
@@ -446,94 +440,6 @@
     </div>
   </div>
   <button id="downloadButton" onclick="downloadPDF()">Download Resume as PDF</button>
-  <textarea id="atsText" readonly>
-CHANDAN KUMAR
-Data Scientist | IIT | Super30 | IBM
-+91-9199000200 | ckism.iit@gmail.com | linkedin.com/in/chandaniit
-
-Professional Summary
-IIT graduate and Data Scientist with around 7 years of expertise in delivering AI-driven solutions across finance, banking, energy, and environmental sectors. Skilled in Machine Learning, Deep Learning, Generative AI, LLMs, NLP, RAG, vector databases, and MLOps, with hands-on expertise in Python, TensorFlow, FastAPI, and cloud platforms (AWS, Azure, GCP). Proven ability to design and deploy scalable ML pipelines, working with tools like Databricks, ML Studio, SageMaker, Bedrock, Vertex AI, LangChain, LangGraph, CrewAI, Hugging Face, Docker, and Kubernetes. Experienced in building robust ETL workflows and delivering analytics through Tableau and Power BI. Passionate about leveraging AI to drive automation, innovation, and business value.
-
-Education
-IIT Dhanbad - B.Tech (2013-2017)
-Super30, Patna (2012-2013)
-
-Professional Experience
-IBM - Data Scientist (Mar 2024 - Present)
-• Led enterprise-scale AI solutions development with multi-agent systems and MLOps governance frameworks, achieving 25% operational efficiency improvement.
-• Architected scalable ML model deployments and automation solutions for Fortune 500 clients, ensuring ethical AI practices in production environments.
-
-Accenture - Data Scientist (Apr 2021 - Feb 2024)
-• Architected ML solutions for Fortune 500 banking and finance clients, building scalable data pipelines with cloud and distributed computing frameworks.
-• Developed AI-powered document processing and customer segmentation systems, improving operational workflows by 30% through advanced analytics.
-
-Capgemini - Process Lead (Feb 2021 - Mar 2021)
-• Led cross-functional teams to deliver process optimization initiatives using data-driven methodologies and statistical analysis.
-• Coordinated high-quality project deliverables within tight timelines, enhancing operational efficiency through strategic process improvements.
-
-Clean Harbors - Data Scientist (Jun 2018 - Jan 2021)
-• Developed AI-driven WCC and invoice auditing systems, improving compliance operations and reducing costs by 15% through predictive analytics.
-• Applied advanced statistical analysis and data mining techniques to solve complex environmental and financial challenges across enterprise operations.
-
-Certifications
-- Northwestern University - Analytics & AI
-- LangChain Academy - LangGraph
-- Databricks Academy - Generative AI
-- Hugging Face - AI Agents Fundamentals
-- IBM - Watsonx.ai Technical Essentials
-- Neo4j - Neo4j & LLM Fundamentals
-- IBM - Watsonx Essentials
-- Microsoft & LinkedIn - Generative AI
-- Microsoft - Azure Machine Learning
-- Stanford University - Machine Learning
-- Duke University - DevOps, DataOps, MLOps
-- LangChain Academy - LangSmith
-- AWS - AWS Cloud
-- Udemy - Project Management Fundamentals
-- Udemy - Product Management Fundamentals
-- Udemy - MCP (Model Context Protocol)
-- Microsoft - SQL Server
-
-Key Projects
-MARC (Multi-Agent Resource Coordinator), IBM
-• Developed and deployed multiple agents for IBM's MARC platform, enhancing multi-agent collaboration and workflow automation using AI Governance principles.
-• Utilized advanced LLMs for intelligent task orchestration and agent selection, streamlining enterprise workflows with scalable multi-agent AI systems.
-
-Mizuho Bank, Accenture
-• Developed PdfGPT, an AI-powered text summarization system, enhancing document processing workflows with key feature extraction capabilities.
-• Implemented PDF text summarization through interactive chat functionality, reducing document review time by 30% with AI-driven automation systems.
-
-Ulster Bank, Accenture
-• Automated machine learning pipelines for customer segmentation algorithms using Python, AWS Glue, and Athena for scalable data processing.
-• Created and validated comprehensive Data Models, deriving meaningful business insights and effectively communicating findings to client stakeholders.
-
-Facebook, Accenture
-• Examined data from multiple disparate sources to discover actionable insights providing competitive advantage for social media clients.
-• Designed and optimized machine learning pipelines specializing in forecasting models, leveraging Python, Glue, Athena, and SageMaker to enhance decision-making processes.
-
-Waste Classification Code, Clean Harbors
-• Designed and fine-tuned Waste Classification Code Prediction models enabling autonomous WCC assignment, creating unified datasets with vital features for all waste classes.
-• Applied logical data checks for input consistency and validation, facilitating accurate classification based on physical properties and environmental compliance requirements.
-
-Invoice Audit, Clean Harbors
-• Developed comprehensive invoice auditing and revenue prediction algorithms using advanced machine learning and statistical analysis techniques.
-• Streamlined invoice verification processes through automation, reducing audit time by 20% and improving financial compliance and operational efficiency.
-
-Key Achievements
-- Ranked #1 in HackerRank SQL, demonstrating exceptional database management skills.
-- Recognized by clients for error-free, timely project deliveries across Fortune 500 engagements.
-- Cleared IIT JEE-2013, ranking in the top 1% of JEE Advanced qualifiers.
-- Served as Student Representative in Mess Committee, IIT Dhanbad (2015-2016).
-
-Technical Skills
-- Data Science & AI: Generative AI, LLMs, RAG, NLP, Transformers, Machine Learning, Deep Learning, Time Series, Reinforcement Learning, Computer Vision, Statistical Modeling
-- Programming & Frameworks: Python, R, SQL, TensorFlow, PyTorch, Scikit-learn, Keras, LangChain, LangGraph, CrewAI, Hugging Face, FastAPI, Flask, Django, RESTful APIs
-- Cloud & Databases: AWS (Bedrock, SageMaker, Redshift, Athena, S3, EC2, Lambda, Glue), Azure (Synapse, Databricks, ML Studio), GCP (BigQuery, Vertex AI), Snowflake, PostgreSQL, MongoDB, Pinecone, Chroma, Milvus
-- Data Visualization: Tableau, Power BI, Matplotlib, Seaborn, Plotly
-- Tools & DevOps: Git, GitHub, GitLab, Bitbucket, Docker, Kubernetes, CI/CD for ML Pipelines
-- Analytics & Business: Data Wrangling, Feature Engineering, EDA, Cohort Analysis, Business Intelligence, Product Analytics, Forecasting, Data Governance
-- Core Competencies: Data Science, Analytics & AI, Project Management, Product Management
-  </textarea>
   <script>
     async function downloadPDF() {
       const { jsPDF } = window.jspdf;
