--- a/try.html
+++ b/try.html
@@ -427,7 +427,7 @@
         <div class="section-title"><i class="fas fa-laptop-code"></i><span>Technical Skills</span></div>
         <div class="skills-list">
           <ul>
-            <li><strong>Data Science & AI:</strong> Generative AI, LLMs, RAG, NLP, Transformers, Machine Learning, Deep Learning, Time Series, Reinforcement Learning, Computer Vision, Statistical Modeling, Prompt Engineering, AutoML, Model Monitoring, Responsible AI, AI Governance</li>
+            <li><strong>Data Science & AI:</strong> Generative AI, LLMs, Retrieval-Augmented Generation (RAG), Natural Language Processing (NLP), Transformers, Machine Learning, Deep Learning, Time Series, Reinforcement Learning, Computer Vision, Statistical Modeling, Prompt Engineering, AutoML, Model Monitoring, Responsible AI, AI Governance</li>
             <li><strong>Programming & Frameworks:</strong> Python, R, SQL, TensorFlow, PyTorch, Scikit-learn, Keras, LangChain, LangGraph, CrewAI, Hugging Face, FastAPI, Flask, RESTful APIs</li>
             <li><strong>Cloud & Databases:</strong> AWS (Bedrock, SageMaker, Redshift, Athena, S3, EC2, Lambda, Glue), Azure (Synapse, Databricks, ML Studio), GCP (BigQuery, Vertex AI), Snowflake, PostgreSQL, MongoDB, Pinecone, Chroma, Milvus</li>
             <li><strong>Data Visualization:</strong> Tableau, Power BI, Matplotlib, Seaborn, Plotly</li>
