--- a/try.html
+++ b/try.html
@@ -326,7 +326,7 @@
         <div class="job">
           <div class="job-title"><strong>Accenture</strong> - Data Scientist <span class="job-period">Apr 2021 - Feb 2024</span></div>
           <div class="job-description">
-            <div class="job-line">• Architected ML solutions for Fortune 500 banking and finance clients, building scalable data pipelines with cloud and distributed computing frameworks.</div>
+            <div class="job-line">• Architected ML solutions for Fortune 500 clients, building scalable data pipelines with cloud and distributed computing frameworks.</div>
             <div class="job-line">• Developed AI-powered document processing and customer segmentation systems, improving operational workflows by 30% through advanced analytics.</div>
           </div>
         </div>
