--- a/wife_resume.html
+++ b/wife_resume.html
@@ -356,7 +356,7 @@
       <div class="section">
         <div class="section-title"><i class="fas fa-briefcase"></i><span>Professional Experience</span></div>
         <div class="job">
-          <div class="job-title"><strong>AMD</strong> - <span class="job-period">Jul 2024 - Jun 2025</span></div>
+          <div class="job-title"><strong>AMD</strong> <span class="job-period">Jul 2024 - Jun 2025</span></div>
           <ul>
             <li>Implemented robust MLOps infrastructure using Docker containerization and Kubernetes orchestration, enabling seamless automated model training, validation, and deployment workflows across distributed systems.</li>
             <li>Developed sophisticated real-time model monitoring systems with automated retraining workflows, incorporating drift detection, performance metrics tracking, and intelligent alerting mechanisms for production environments.</li>
