--- a/anjali.html
+++ b/anjali.html
@@ -359,7 +359,7 @@
         <div class="project">
           <div class="project-title"><strong>AVIVA</strong>, <span class="company-name">AMD</span></div>
           <ul>
-            <li>Built sophisticated multi-agent system leveraging large language models and reinforcement learning techniques, reducing manual workflow processes by 70% through intelligent task automation and decision-making capabilities.</li>
+            <li>Built sophisticated multi-agent system leveraging large language models and small language models techniques, reducing manual workflow processes by 70% through intelligent task automation and decision-making capabilities.</li>
             <li>Applied comprehensive AI Governance frameworks, including bias detection, fairness metrics, and ethical deployment guidelines, ensuring responsible AI implementation across enterprise-level production systems.</li>
             <li><strong>Key Skills:</strong> Python, RAG, Generative AI, FineTuning, Machine Learning, NLP, LangChain, LangGraph, AWS</li>
           </ul>
