--- a/anjali.html
+++ b/anjali.html
@@ -340,9 +340,8 @@
         <div class="job">
           <div class="job-title"><strong>AMD</strong> - CoOp/Intern <span class="job-period">Jul 2024 - Jun 2025</span></div>
           <ul>
-            <li>Implemented robust MLOps infrastructure using Docker containerization and Kubernetes orchestration, enabling seamless automated model training, validation, and deployment workflows across distributed systems.</li>
-            <li>Developed sophisticated real-time model monitoring systems with automated retraining workflows, incorporating drift detection, performance metrics tracking, and intelligent alerting mechanisms for production environments.</li>
-            <li>Collaborated extensively with cross-functional hardware engineering teams to integrate production-ready ML solutions into semiconductor design workflows, ensuring optimal performance and scalability requirements.</li>
+            <li>Developed multiple agents for AMD's AVIVA platform, enhancing multi-agent collaboration and workflow automation using AI Governance principles.</li>
+            <li>Utilized advanced LLMs for intelligent task orchestration and agent selection, streamlining enterprise workflows with scalable multi-agent AI systems.</li>
           </ul>
         </div>
         <div class="job">
