--- a/anjali.html
+++ b/anjali.html
@@ -342,6 +342,7 @@
           <ul>
             <li>Developed multiple agents for AMD's AVIVA platform, enhancing multi-agent collaboration and workflow automation using AI Governance principles.</li>
             <li>Utilized advanced LLMs for intelligent task orchestration and agent selection, streamlining enterprise workflows with scalable multi-agent AI systems.</li>
+            <li>Architected scalable ML model deployments and automation solutions for Fortune 500 clients, ensuring ethical AI practices in production environments.</li>
           </ul>
         </div>
         <div class="job">
