--- a/anjali.html
+++ b/anjali.html
@@ -385,7 +385,7 @@
         <div class="section-title"><i class="fas fa-laptop-code"></i><span>Technical Skills</span></div>
         <div class="skills-list">
           <ul>
-            <li><strong>Data Science & AI:</strong> Generative AI, LLMs, RAG, Prompt Engineering, NLP, Transformers, Text Analytics, Sentiment Analysis, Named Entity Recognition (NER), Machine Learning, Deep Learning, Time Series Analysis, Reinforcement Learning, Computer Vision, CNNs, OpenCV, Statistical Modeling, Hypothesis Testing</li>
+            <li><strong>Data Science & AI:</strong> Generative AI, Large Language Models (LLMs), Retrieval-Augmented Generation (RAG), Prompt Engineering, Natural Language Processing (NLP), Transformers, Text Analytics, Sentiment Analysis, Named Entity Recognition (NER), Machine Learning, Deep Learning, Time Series Analysis, Reinforcement Learning, Computer Vision, Convolutional Neural Networks (CNNs), OpenCV, Statistical Modeling, Hypothesis Testing, AutoML, Model Monitoring, Responsible AI, AI Governance</li>
             <li><strong>Programming & Frameworks:</strong> Python, R, SQL, TensorFlow, PyTorch, Scikit-learn, Keras, LangChain, LangGraph, CrewAI, Hugging Face, LlamaIndex, FastAPI, Flask, Django, RESTful API Development, GraphQL, Pandas, NumPy, SciPy, StatsModels, Streamlit, Bash, Shell Scripting</li>
             <li><strong>Cloud & Databases:</strong> AWS (Bedrock, SageMaker, Redshift, Athena, S3, EC2, Lambda, EMR, Glue), Azure (Synapse, Databricks, ML Studio), GCP (BigQuery, Vertex AI, Dataflow), Snowflake, PostgreSQL, MySQL, MongoDB, Pinecone, Chroma, Milvus, ETL Pipelines</li>
             <li><strong>Visualization & BI Tools:</strong> Tableau, Power BI, Matplotlib, Seaborn, Plotly</li>
