--- a/anjali.html
+++ b/anjali.html
@@ -280,15 +280,15 @@
           <div class="contact-info" style="display: flex; gap: 15px; font-size: 10px; margin-top: 4px;">
             <div class="contact-item" style="flex: none; display: flex; align-items: center; gap: 4px;">
               <span class="icon"><i class="fas fa-envelope"></i></span>
-              <a href="mailto:anjalirani.iiit@gmail.com">anjalirani.iiit@gmail.com</a>
+              <a href="mailto:anjalirani.iiit@gmail.com" style="font-size: 11px; font-weight: bold;">anjalirani.iiit@gmail.com</a>
             </div>
             <div class="contact-item" style="flex: none; display: flex; align-items: center; gap: 4px;">
               <span class="icon"><i class="fab fa-linkedin-in"></i></span>
-              <a href="https://www.linkedin.com/in/anjaliyaedav">linkedin.com/in/anjaliyaedav</a>
+              <a href="https://www.linkedin.com/in/anjaliyaedav" style="font-size: 11px; font-weight: bold;">linkedin.com/in/anjaliyaedav</a>
             </div>
             <div class="contact-item" style="flex: none; display: flex; align-items: center; gap: 4px;">
               <span class="icon"><i class="fas fa-phone"></i></span>
-              <span>+91-7033441492</span>
+              <span style="font-size: 11px; font-weight: bold;">+91-7033441492</span>
             </div>
           </div>
         </div>
