--- a/try.html
+++ b/try.html
@@ -428,7 +428,7 @@
         <div class="skills-list">
           <ul>
             <li><strong>Data Science & AI:</strong> Generative AI, Large Language Models (LLMs), Small Language Models (SLMs), Foundation Models, Fine-tuning, Retrieval-Augmented Generation (RAG), Prompt Engineering, Natural Language Processing (NLP), Transformers, Text Analytics, Sentiment Analysis, Named Entity Recognition (NER), Multi-modal AI, Machine Learning, Deep Learning, Time Series Analysis & Forecasting, Marketing Mix Modeling (MMM), Reinforcement Learning, Computer Vision, Convolutional Neural Networks (CNNs), OpenCV, Statistical Modeling, Hypothesis Testing, Synthetic Data Generation, AutoML, Model Monitoring, Responsible AI, AI Governance</li>
-            <li><strong>Programming & Frameworks:</strong> Python, R, SQL, TensorFlow, PyTorch, Scikit-learn, Keras, LangChain, LangGraph, CrewAI, AutoGen, Hugging Face, FastAPI, Flask, RESTful APIs</li>
+            <li><strong>Programming & Frameworks:</strong> Python, R, SQL, TensorFlow, PyTorch, Scikit-learn, Keras, LangChain, LangGraph, CrewAI, AutoGen, Hugging Face, FastAPI, Flask</li>
             <li><strong>Cloud & Databases:</strong> AWS (Bedrock, SageMaker, Redshift, Athena, S3, EC2, Lambda, Glue), Azure (Synapse, Databricks, ML Studio), GCP (BigQuery, Vertex AI), Snowflake, PostgreSQL, MongoDB, Pinecone, Chroma, Milvus</li>
             <li><strong>Data Visualization:</strong> Tableau, Power BI, Matplotlib, Seaborn, Plotly</li>
             <li><strong>Tools & DevOps:</strong> Git, GitHub, GitLab, Bitbucket, Docker, Kubernetes, CI/CD for ML Pipelines</li>
