--- a/aug.html
+++ b/aug.html
@@ -210,7 +210,7 @@
       line-height: 1.3;
     }
 
-    /* Improved Certification Layout */
+    /* Fixed Certification Layout */
     .certifications-grid {
       padding-left: 12px;
       margin: 1px 0;
@@ -219,7 +219,7 @@
     .cert-row {
       display: flex;
       margin-bottom: 2px;
-      gap: 15px;
+      gap: 10px;
       align-items: flex-start;
     }
 
@@ -228,7 +228,7 @@
       font-size: 10.5px;
       display: flex;
       align-items: flex-start;
-      min-height: 20px;
+      min-height: 16px;
     }
 
     .cert-item::before {
@@ -384,11 +384,11 @@
             <div class="cert-item"><span class="certification-institution">Duke University</span> - DevOps, DataOps, MLOps</div>
             <div class="cert-item"><span class="certification-institution">LangChain Academy</span> - LangSmith</div>
             <div class="cert-item"><span class="certification-institution">Udemy</span> - Project Management Fundamentals</div>
-            <div class="cert-item class="empty"></div>
+            <div class="cert-item"><span class="certification-institution">Udemy</span> - MCP (Model Context Protocol)</div>
           </div>
           <div class="cert-row">
             <div class="cert-item"><span class="certification-institution">Udemy</span> - Product Management Fundamentals</div>
-            <div class="cert-item"><span class="certification-institution">Udemy</span> - MCP (Model Context Protocol)</div>
+            <div class="cert-item class="empty"></div>
             <div class="cert-item class="empty"></div>
             <div class="cert-item class="empty"></div>
           </div>
