--- a/aug.html
+++ b/aug.html
@@ -210,7 +210,7 @@
       line-height: 1.3;
     }
 
-    /* Optimized Certification Layout */
+    /* Length-based Certification Layout */
     .certifications-grid {
       padding-left: 12px;
       margin: 1px 0;
@@ -224,28 +224,11 @@
     }
 
     .cert-item {
+      flex: 1;
       font-size: 10.5px;
       display: flex;
       align-items: flex-start;
       min-height: 16px;
-    }
-
-    /* Flexible column widths - more space for columns 1 & 3 */
-    .cert-item:nth-child(1) {
-      flex: 1.3; /* More space for longer certifications */
-    }
-
-    .cert-item:nth-child(2) {
-      flex: 1;
-    }
-
-    .cert-item:nth-child(3) {
-      flex: 1.2; /* More space for longer certifications */
-    }
-
-    .cert-item:nth-child(4) {
-      flex: 0.8; /* Less space for shorter certifications */
-      margin-left: 8px; /* Shift 4th column slightly right */
     }
 
     .cert-item::before {
@@ -271,13 +254,6 @@
       }
       .cert-item {
         width: 100%;
-        margin-left: 0 !important;
-      }
-      .cert-item:nth-child(1),
-      .cert-item:nth-child(2),
-      .cert-item:nth-child(3),
-      .cert-item:nth-child(4) {
-        flex: none;
       }
     }
 
@@ -386,30 +362,35 @@
       <div class="section">
         <div class="section-title"><i class="fas fa-certificate"></i><span>Certifications</span></div>
         <div class="certifications-grid">
+          <!-- Row 1: Long certifications -->
           <div class="cert-row">
             <div class="cert-item"><span class="certification-institution">Northwestern University</span> - Analytics & AI</div>
-            <div class="cert-item"><span class="certification-institution">LangChain Academy</span> - LangGraph</div>
-            <div class="cert-item"><span class="certification-institution">Databricks Academy</span> - Generative AI</div>
+            <div class="cert-item"><span class="certification-institution">Microsoft & LinkedIn</span> - Generative AI</div>
+            <div class="cert-item"><span class="certification-institution">Hugging Face</span> - AI Agents Fundamentals</div>
             <div class="cert-item"><span class="certification-institution">AWS</span> - AWS Cloud</div>
           </div>
+          <!-- Row 2: Medium-Long certifications -->
           <div class="cert-row">
-            <div class="cert-item"><span class="certification-institution">Hugging Face</span> - AI Agents Fundamentals</div>
-            <div class="cert-item"><span class="certification-institution">IBM</span> - Watsonx.ai Technical Essentials</div>
+            <div class="cert-item"><span class="certification-institution">Databricks Academy</span> - Generative AI</div>
+            <div class="cert-item"><span class="certification-institution">Stanford University</span> - Machine Learning</div>
             <div class="cert-item"><span class="certification-institution">Neo4j</span> - Neo4j & LLM Fundamentals</div>
             <div class="cert-item"><span class="certification-institution">Microsoft</span> - SQL Server</div>
           </div>
+          <!-- Row 3: Medium certifications -->
           <div class="cert-row">
-            <div class="cert-item"><span class="certification-institution">Microsoft & LinkedIn</span> - Generative AI</div>
             <div class="cert-item"><span class="certification-institution">Microsoft</span> - Azure Machine Learning</div>
-            <div class="cert-item"><span class="certification-institution">Stanford University</span> - Machine Learning</div>
+            <div class="cert-item"><span class="certification-institution">LangChain Academy</span> - LangGraph</div>
+            <div class="cert-item"><span class="certification-institution">LangChain Academy</span> - LangSmith</div>
             <div class="cert-item"><span class="certification-institution">IBM</span> - Watsonx Essentials</div>
           </div>
+          <!-- Row 4: Medium-Short to Long certifications -->
           <div class="cert-row">
             <div class="cert-item"><span class="certification-institution">Duke University</span> - DevOps, DataOps, MLOps</div>
-            <div class="cert-item"><span class="certification-institution">LangChain Academy</span> - LangSmith</div>
+            <div class="cert-item"><span class="certification-institution">IBM</span> - Watsonx.ai Technical Essentials</div>
             <div class="cert-item"><span class="certification-institution">Udemy</span> - Project Management Fundamentals</div>
             <div class="cert-item"><span class="certification-institution">Udemy</span> - MCP</div>
           </div>
+          <!-- Row 5: Remaining certification -->
           <div class="cert-row">
             <div class="cert-item"><span class="certification-institution">Udemy</span> - Product Management Fundamentals</div>
             <div class="cert-item class="empty"></div>
@@ -510,7 +491,7 @@
         const imgHeight = canvas.height * imgWidth / canvas.width;
         doc.addImage(imgData, 'JPEG', 0, 0, imgWidth, imgHeight * (pageHeight / imgHeight), undefined, 'FAST');
         doc.save('Chandan_Kumar_Resume.pdf');
-      } catch (error) {
+      } catch error) {
         console.error('Error generating PDF:', error);
         alert('Failed to generate PDF. Please try again.');
       } finally {
