--- a/aug.html
+++ b/aug.html
@@ -210,7 +210,7 @@
       line-height: 1.3;
     }
 
-    /* Length-based Certification Layout */
+    /* Properly Length-based Certification Layout */
     .certifications-grid {
       padding-left: 12px;
       margin: 1px 0;
@@ -362,40 +362,33 @@
       <div class="section">
         <div class="section-title"><i class="fas fa-certificate"></i><span>Certifications</span></div>
         <div class="certifications-grid">
-          <!-- Row 1: Long certifications -->
+          <!-- Row 1: Longest similar-length certifications -->
           <div class="cert-row">
             <div class="cert-item"><span class="certification-institution">Northwestern University</span> - Analytics & AI</div>
-            <div class="cert-item"><span class="certification-institution">Microsoft & LinkedIn</span> - Generative AI</div>
-            <div class="cert-item"><span class="certification-institution">Hugging Face</span> - AI Agents Fundamentals</div>
+            <div class="cert-item"><span class="certification-institution">Duke University</span> - DevOps, DataOps, MLOps</div>
+            <div class="cert-item"><span class="certification-institution">Udemy</span> - Project Management Fundamentals</div>
             <div class="cert-item"><span class="certification-institution">AWS</span> - AWS Cloud</div>
           </div>
-          <!-- Row 2: Medium-Long certifications -->
+          <!-- Row 2: Medium-long similar-length certifications -->
           <div class="cert-row">
-            <div class="cert-item"><span class="certification-institution">Databricks Academy</span> - Generative AI</div>
-            <div class="cert-item"><span class="certification-institution">Stanford University</span> - Machine Learning</div>
+            <div class="cert-item"><span class="certification-institution">Microsoft & LinkedIn</span> - Generative AI</div>
+            <div class="cert-item"><span class="certification-institution">Hugging Face</span> - AI Agents Fundamentals</div>
             <div class="cert-item"><span class="certification-institution">Neo4j</span> - Neo4j & LLM Fundamentals</div>
             <div class="cert-item"><span class="certification-institution">Microsoft</span> - SQL Server</div>
           </div>
-          <!-- Row 3: Medium certifications -->
+          <!-- Row 3: Medium similar-length certifications -->
           <div class="cert-row">
+            <div class="cert-item"><span class="certification-institution">Databricks Academy</span> - Generative AI</div>
+            <div class="cert-item"><span class="certification-institution">Stanford University</span> - Machine Learning</div>
             <div class="cert-item"><span class="certification-institution">Microsoft</span> - Azure Machine Learning</div>
-            <div class="cert-item"><span class="certification-institution">LangChain Academy</span> - LangGraph</div>
-            <div class="cert-item"><span class="certification-institution">LangChain Academy</span> - LangSmith</div>
             <div class="cert-item"><span class="certification-institution">IBM</span> - Watsonx Essentials</div>
           </div>
-          <!-- Row 4: Medium-Short to Long certifications -->
+          <!-- Row 4: Short-medium similar-length certifications -->
           <div class="cert-row">
-            <div class="cert-item"><span class="certification-institution">Duke University</span> - DevOps, DataOps, MLOps</div>
             <div class="cert-item"><span class="certification-institution">IBM</span> - Watsonx.ai Technical Essentials</div>
-            <div class="cert-item"><span class="certification-institution">Udemy</span> - Project Management Fundamentals</div>
+            <div class="cert-item"><span class="certification-institution">LangChain Academy</span> - LangGraph</div>
+            <div class="cert-item"><span class="certification-institution">LangChain Academy</span> - LangSmith</div>
             <div class="cert-item"><span class="certification-institution">Udemy</span> - MCP</div>
-          </div>
-          <!-- Row 5: Remaining certification -->
-          <div class="cert-row">
-            <div class="cert-item"><span class="certification-institution">Udemy</span> - Product Management Fundamentals</div>
-            <div class="cert-item class="empty"></div>
-            <div class="cert-item class="empty"></div>
-            <div class="cert-item class="empty"></div>
           </div>
         </div>
       </div>
@@ -491,7 +484,7 @@
         const imgHeight = canvas.height * imgWidth / canvas.width;
         doc.addImage(imgData, 'JPEG', 0, 0, imgWidth, imgHeight * (pageHeight / imgHeight), undefined, 'FAST');
         doc.save('Chandan_Kumar_Resume.pdf');
-      } catch error) {
+      } catch (error) {
         console.error('Error generating PDF:', error);
         alert('Failed to generate PDF. Please try again.');
       } finally {
