--- a/aug.html
+++ b/aug.html
@@ -362,28 +362,28 @@
       <div class="section">
         <div class="section-title"><i class="fas fa-certificate"></i><span>Certifications</span></div>
         <div class="certifications-grid">
-          <!-- Row 1: Longest similar-length certifications -->
+          <!-- Row 1: Column 1 has all longest similar-length certifications -->
           <div class="cert-row">
             <div class="cert-item"><span class="certification-institution">Northwestern University</span> - Analytics & AI</div>
-            <div class="cert-item"><span class="certification-institution">Duke University</span> - DevOps, DataOps, MLOps</div>
-            <div class="cert-item"><span class="certification-institution">Udemy</span> - Project Management Fundamentals</div>
-            <div class="cert-item"><span class="certification-institution">AWS</span> - AWS Cloud</div>
-          </div>
-          <!-- Row 2: Medium-long similar-length certifications -->
-          <div class="cert-row">
             <div class="cert-item"><span class="certification-institution">Microsoft & LinkedIn</span> - Generative AI</div>
             <div class="cert-item"><span class="certification-institution">Hugging Face</span> - AI Agents Fundamentals</div>
+            <div class="cert-item"><span class="certification-institution">AWS</span> - AWS Cloud</div>
+          </div>
+          <!-- Row 2 -->
+          <div class="cert-row">
+            <div class="cert-item"><span class="certification-institution">Udemy</span> - Project Management Fundamentals</div>
             <div class="cert-item"><span class="certification-institution">Neo4j</span> - Neo4j & LLM Fundamentals</div>
+            <div class="cert-item"><span class="certification-institution">Databricks Academy</span> - Generative AI</div>
             <div class="cert-item"><span class="certification-institution">Microsoft</span> - SQL Server</div>
           </div>
-          <!-- Row 3: Medium similar-length certifications -->
+          <!-- Row 3 -->
           <div class="cert-row">
-            <div class="cert-item"><span class="certification-institution">Databricks Academy</span> - Generative AI</div>
+            <div class="cert-item"><span class="certification-institution">Duke University</span> - DevOps, DataOps, MLOps</div>
             <div class="cert-item"><span class="certification-institution">Stanford University</span> - Machine Learning</div>
             <div class="cert-item"><span class="certification-institution">Microsoft</span> - Azure Machine Learning</div>
             <div class="cert-item"><span class="certification-institution">IBM</span> - Watsonx Essentials</div>
           </div>
-          <!-- Row 4: Short-medium similar-length certifications -->
+          <!-- Row 4 -->
           <div class="cert-row">
             <div class="cert-item"><span class="certification-institution">IBM</span> - Watsonx.ai Technical Essentials</div>
             <div class="cert-item"><span class="certification-institution">LangChain Academy</span> - LangGraph</div>
@@ -455,8 +455,8 @@
             <li><strong>Cloud & Databases:</strong> AWS (Bedrock, SageMaker, Redshift, Athena, S3, EC2, Lambda, Glue), Azure (Synapse, Databricks, ML Studio), GCP (BigQuery, Vertex AI), Snowflake, PostgreSQL, MongoDB, Pinecone, Chroma, Milvus</li>
             <li><strong>Data Visualization:</strong> Tableau, Power BI, Matplotlib, Seaborn, Plotly</li>
             <li><strong>Tools & DevOps:</strong> Git, GitHub, GitLab, Bitbucket, Docker, Kubernetes, CI/CD for ML Pipelines</li>
-            <li><strong>Analytics & Business:</strong> Data Wrangling, Feature Engineering, EDA, Cohort Analysis, Business Intelligence, Product Analytics, Forecasting, Data Governance</li>
-            <li><strong>Core Competencies:</strong> Data Science, Analytics & AI, Project Management, Product Management</li>
+            <li><strong>Analytics & Business:</strong> Data Science, Analytics & AI, Project Management, Product Management</li>
+            <li><strong>Core Competencies:</strong> Data Wrangling, Feature Engineering, EDA, Cohort Analysis, Business Intelligence, Product Analytics, Forecasting, Data Governance</li>
           </ul>
         </div>
       </div>
