--- a/aug.html
+++ b/aug.html
@@ -210,7 +210,7 @@
       line-height: 1.3;
     }
 
-    /* Properly Length-based Certification Layout */
+    /* Perfectly Balanced Certification Layout */
     .certifications-grid {
       padding-left: 12px;
       margin: 1px 0;
@@ -220,15 +220,32 @@
       display: flex;
       margin-bottom: 2px;
       align-items: flex-start;
-      gap: 8px;
+      gap: 4px;
+      width: 100%;
     }
 
     .cert-item {
-      flex: 1;
       font-size: 10.5px;
       display: flex;
       align-items: flex-start;
       min-height: 16px;
+    }
+
+    /* Optimized column widths to use full available space */
+    .cert-item:nth-child(1) {
+      flex: 0 0 28%; /* More space for longest certifications */
+    }
+
+    .cert-item:nth-child(2) {
+      flex: 0 0 26%; /* Balanced space for medium-long */
+    }
+
+    .cert-item:nth-child(3) {
+      flex: 0 0 24%; /* Balanced space for medium */
+    }
+
+    .cert-item:nth-child(4) {
+      flex: 0 0 22%; /* Optimal space for shorter certifications */
     }
 
     .cert-item::before {
@@ -253,7 +270,14 @@
         gap: 2px;
       }
       .cert-item {
+        flex: none !important;
         width: 100%;
+      }
+      .cert-item:nth-child(1),
+      .cert-item:nth-child(2),
+      .cert-item:nth-child(3),
+      .cert-item:nth-child(4) {
+        flex: none;
       }
     }
 
@@ -362,7 +386,7 @@
       <div class="section">
         <div class="section-title"><i class="fas fa-certificate"></i><span>Certifications</span></div>
         <div class="certifications-grid">
-          <!-- Row 1: Column 1 has all longest similar-length certifications -->
+          <!-- Row 1: Perfectly balanced columns -->
           <div class="cert-row">
             <div class="cert-item"><span class="certification-institution">Northwestern University</span> - Analytics & AI</div>
             <div class="cert-item"><span class="certification-institution">Microsoft & LinkedIn</span> - Generative AI</div>
@@ -455,8 +479,8 @@
             <li><strong>Cloud & Databases:</strong> AWS (Bedrock, SageMaker, Redshift, Athena, S3, EC2, Lambda, Glue), Azure (Synapse, Databricks, ML Studio), GCP (BigQuery, Vertex AI), Snowflake, PostgreSQL, MongoDB, Pinecone, Chroma, Milvus</li>
             <li><strong>Data Visualization:</strong> Tableau, Power BI, Matplotlib, Seaborn, Plotly</li>
             <li><strong>Tools & DevOps:</strong> Git, GitHub, GitLab, Bitbucket, Docker, Kubernetes, CI/CD for ML Pipelines</li>
-            <li><strong>Analytics & Business:</strong> Data Science, Analytics & AI, Project Management, Product Management</li>
-            <li><strong>Core Competencies:</strong> Data Wrangling, Feature Engineering, EDA, Cohort Analysis, Business Intelligence, Product Analytics, Forecasting, Data Governance</li>
+            <li><strong>Analytics & Business:</strong> Data Wrangling, Feature Engineering, EDA, Cohort Analysis, Business Intelligence, Product Analytics, Forecasting, Data Governance</li>
+            <li><strong>Core Competencies:</strong> Data Science, Analytics & AI, Project Management, Product Management</li>
           </ul>
         </div>
       </div>
