--- a/aug.html
+++ b/aug.html
@@ -233,11 +233,11 @@
 
     /* Optimized column widths to use full available space */
     .cert-item:nth-child(1) {
-      flex: 0 0 28%; /* More space for longest certifications */
+      flex: 0 0 29%; /* More space for longest certifications */
     }
 
     .cert-item:nth-child(2) {
-      flex: 0 0 26%; /* Balanced space for medium-long */
+      flex: 0 0 25%; /* Balanced space for medium-long */
     }
 
     .cert-item:nth-child(3) {
@@ -386,11 +386,11 @@
       <div class="section">
         <div class="section-title"><i class="fas fa-certificate"></i><span>Certifications</span></div>
         <div class="certifications-grid">
-          <!-- Row 1: Perfectly balanced columns -->
+          <!-- Row 1: Perfectly balanced columns with swapped certifications -->
           <div class="cert-row">
             <div class="cert-item"><span class="certification-institution">Northwestern University</span> - Analytics & AI</div>
             <div class="cert-item"><span class="certification-institution">Microsoft & LinkedIn</span> - Generative AI</div>
-            <div class="cert-item"><span class="certification-institution">Hugging Face</span> - AI Agents Fundamentals</div>
+            <div class="cert-item"><span class="certification-institution">IBM</span> - Watsonx.ai Technical Essentials</div>
             <div class="cert-item"><span class="certification-institution">AWS</span> - AWS Cloud</div>
           </div>
           <!-- Row 2 -->
@@ -407,9 +407,9 @@
             <div class="cert-item"><span class="certification-institution">Microsoft</span> - Azure Machine Learning</div>
             <div class="cert-item"><span class="certification-institution">IBM</span> - Watsonx Essentials</div>
           </div>
-          <!-- Row 4 -->
+          <!-- Row 4 with swapped certification -->
           <div class="cert-row">
-            <div class="cert-item"><span class="certification-institution">IBM</span> - Watsonx.ai Technical Essentials</div>
+            <div class="cert-item"><span class="certification-institution">Hugging Face</span> - AI Agents Fundamentals</div>
             <div class="cert-item"><span class="certification-institution">LangChain Academy</span> - LangGraph</div>
             <div class="cert-item"><span class="certification-institution">LangChain Academy</span> - LangSmith</div>
             <div class="cert-item"><span class="certification-institution">Udemy</span> - MCP</div>
